# TechOfProgramming_project

./: CMakeLists.txt  README.md  local_client.cpp  local_server.cpp  main.cpp  tp_project_fiodorkolotilin.pro
Data/: test_field.txt  test_field.xml
Data/Rooms/: example.json
Description/: ProjectDescription.md  UMLDiagramFile.txt
headers/: my_geometry.h
headers/Model/: User.h  UserInfo.h
headers/Model/AppData/: DataManager.h  LocalData.h
headers/Model/DataTypes/: FieldStructure.h  File.h  Message.h  RoomFile.h
headers/Model/Game/: EdgeView.h  FieldObjectView.h  GameField.h  GameManager.h  Hex.h  HexView.h  Player.h  Room.h  VertexView.h
headers/Network/: GameClient.h  GameServer.h
headers/UIClasses/: Activity.h  Button.h  EditTextWidget.h  Layout.h  RoomItem.h  ScrollArea.h  TextWidget.h  View.h  Widget.h
headers/UILogic/: Application.h
headers/UILogic/Game/: ChatWidget.h  EdgeView.h  GameActivity.h  GameFieldWidget.h  GameInfoWidget.h  GameMenuWidget.h  HexView.h  RoomSettingsWidget.h  RoomWidget.h  TutorialActivity.h  TutorialWidget.h  VertexView.h
headers/UILogic/Hub/: GlobalGameFindMenu.h  MainMenu.h  PlayMenu.h  RoomChooseMenu.h  Settings.h  StartActivity.h
rapidxml-1.13/: rapidxml_print.hpp
sources/Model/: User.cpp  my_geometry.cpp
sources/Model/DataTypes/: FieldStructure.cpp  File.cpp  Message.cpp  RoomFile.cpp
sources/Model/Game/: ChatManager.cpp  EdgeView.cpp  FieldObjectView.cpp  GameField.cpp  GameManager.cpp  Hex.cpp  HexView.cpp  Room.cpp  VertexView.cpp
sources/Network/: GameClient.cpp  GameServer.cpp
sources/UIClasses/: Activity.cpp  Button.cpp  EditTextWidget.cpp  Layout.cpp  RoomItem.cpp  ScrollArea.cpp  TextWidget.cpp  View.cpp  Widget.cpp
sources/UILogic/: Application.cpp
sources/UILogic/Game/: ChatWidget.cpp  EdgeView.cpp  GameActivity.cpp  GameFieldWidget.cpp  GameInfoWidget.cpp  GameMenuWidget.cpp  HexView.cpp  RoomWidget.cpp  TutorialActivity.cpp  TutorialWidget.cpp  VertexView.cpp
sources/UILogic/Hub/: GameTypeSelectionMenu.cpp  GlobalGameFindMenu.cpp  MainMenu.cpp  PlayMenu.cpp  RoomChooseMenu.cpp  Settings.cpp  SettingsMenu.cpp  StartActivity.cpp
tp_project_fiodorkolotilin_autogen/: deps
